# Quantum-Spectral-Anomaly-Detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
results/: centering_check.csv  dataset_comparison_auc.csv  experiment_B_auc.csv
scripts/: run_centering_check.py  run_dataset_comparison.py  run_encoding_comparison.py  run_experiment_A.py  run_experiment_B.py  run_kernel_encoding_comparison.py
src/qsad/: __init__.py
src/qsad/core/: __init__.py  calibration.py  classical_pca.py  detector.py  kernel_pca.py  responses.py  statistics.py
src/qsad/models/: __init__.py  datasets.py  encodings.py  spin_chains.py
src/qsad/viz/: __init__.py  panels.py  style.py
